fix: separtor z-index

--- a/src/clients/styles/app.scss
+++ b/src/clients/styles/app.scss
@@ -127,6 +127,10 @@ body.loading {
   }
 }
 
+sc-separator {
+  z-index: 10000;
+}
+
 dotpi-client-list {
   z-index: 1000;
 }
